--- a/index.html
+++ b/index.html
@@ -8,22 +8,42 @@
     * {
       margin: 0;
       padding: 0;
+      box-sizing: border-box;
+    }
+    body {
+      text-align: center;
+      background: #222;
     }
     canvas {
-      display: block;
       background: linear-gradient(skyblue, lightgreen);
+      display: block;
       margin: 0 auto;
+    }
+    button {
+      margin-top: 10px;
+      padding: 15px 30px;
+      font-size: 20px;
+      border: none;
+      background: white;
+      color: black;
+      font-weight: bold;
+      border-radius: 10px;
+      cursor: pointer;
+    }
+    button:active {
+      transform: scale(0.95);
     }
   </style>
 </head>
 <body>
   <canvas id="gameCanvas" width="400" height="600"></canvas>
+  <button id="flapBtn">Click</button>
 
   <script>
     const canvas = document.getElementById("gameCanvas");
     const ctx = canvas.getContext("2d");
+    const flapBtn = document.getElementById("flapBtn");
 
-    // Game variables
     let birdX = 80;
     let birdY = 200;
     let birdSize = 30;
@@ -38,11 +58,17 @@
     let score = 0;
     let gameOver = false;
 
-    // Handle input
-    document.addEventListener("keydown", () => {
-      if (!gameOver) velocity = lift;
-      else resetGame();
-    });
+    // Lompat saat klik tombol atau tekan keyboard
+    function flap() {
+      if (!gameOver) {
+        velocity = lift;
+      } else {
+        resetGame();
+      }
+    }
+
+    document.addEventListener("keydown", flap);
+    flapBtn.addEventListener("click", flap);
 
     function resetGame() {
       birdY = 200;
@@ -60,9 +86,7 @@
     function drawPipes() {
       ctx.fillStyle = "green";
       pipes.forEach(pipe => {
-        // atas
         ctx.fillRect(pipe.x, 0, pipeWidth, pipe.top);
-        // bawah
         ctx.fillRect(pipe.x, pipe.top + pipeGap, pipeWidth, canvas.height);
       });
     }
@@ -72,7 +96,6 @@
         let pipe = pipes[i];
         pipe.x -= 2;
 
-        // cek tabrakan
         if (
           birdX < pipe.x + pipeWidth &&
           birdX + birdSize > pipe.x &&
@@ -81,19 +104,16 @@
           gameOver = true;
         }
 
-        // tambah skor
         if (!pipe.passed && pipe.x + pipeWidth < birdX) {
           score++;
           pipe.passed = true;
         }
 
-        // hapus pipe yang keluar layar
         if (pipe.x + pipeWidth < 0) {
           pipes.splice(i, 1);
         }
       }
 
-      // tambah pipe baru
       if (pipes.length === 0 || pipes[pipes.length - 1].x < canvas.width - 200) {
         const topHeight = Math.floor(Math.random() * (canvas.height - pipeGap - 100)) + 50;
         pipes.push({ x: canvas.width, top: topHeight, passed: false });
@@ -111,13 +131,12 @@
       ctx.font = "36px Arial";
       ctx.fillText("Game Over!", 100, canvas.height / 2);
       ctx.font = "24px Arial";
-      ctx.fillText("Tekan tombol apapun untuk restart", 35, canvas.height / 2 + 40);
+      ctx.fillText("Klik tombol untuk restart", 65, canvas.height / 2 + 40);
     }
 
     function gameLoop() {
       ctx.clearRect(0, 0, canvas.width, canvas.height);
 
-      // Update
       velocity += gravity;
       birdY += velocity;
 
